# erp42_ws

./: .gitignore  frames.gv
install/: local_setup.sh  setup.sh
install/erp42_description/lib/erp42_description/: front_camera_viewer  steering_drive_bridge
install/erp42_description/share/erp42_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/erp42_description/share/erp42_description/config/: ackermann_controller.yaml  erp42_controller_config.yaml  erp42_controller_flat.yaml  erp42_controllers.yaml
install/erp42_description/share/erp42_description/launch/: cone_simulation.launch.py  erp42_simulation.launch.py
install/erp42_description/share/erp42_description/meshes/: caucho.dae  caucho_right.dae  disk.dae  erp42_structure.dae  slope.dae  steer_wheel.dae
log/: latest_build
src/erp42_description/: package.xml  setup.cfg  setup.py
src/erp42_description/config/: ackermann_controller.yaml  erp42_controller_config.yaml  erp42_controller_flat.yaml  erp42_controllers.yaml
src/erp42_description/config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/erp42_description/config/log/: latest_build
src/erp42_description/erp42_description/: cone1.py  front_camera_viewer.py  rgbd_fusion.py  steering_drive_bridge.py
src/erp42_description/launch/: cone_simulation.launch.py  erp42_simulation.launch.py
src/erp42_description/urdf/: erp42.urdf.xacro  erp42_control.gazebo  macros_erp42.xacro
src/erp42_description/worlds/: cone1.world  cone2.world  erp42_with_cone.world
(+5 files in other folders)
