<?xml version="1.0"?>
<package format="3">
  <name>erp42_description</name>
  <version>0.1.0</version>
  <description>ERP42 robot description package</description>

  <maintainer email="sumin@example.com">Sumin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>


  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <exec_depend>ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>